<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingTop="@dimen/_8sdp">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Material3.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_dashboard"
            android:paddingBottom="@dimen/_4sdp"
            app:title="@string/app_name"
            app:titleTextColor="?attr/colorPrimary">

            <LinearLayout
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/_20sdp"
                    app:tint="@color/primary"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:id="@+id/downloadIcon"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    app:srcCompat="@drawable/ic_download" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:background="?selectableItemBackgroundBorderless"
                    android:id="@+id/historyIcon"
                    android:layout_width="@dimen/_20sdp"
                    app:tint="@color/primary"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_history" />
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_14sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6sdp"
                android:orientation="vertical"
                android:padding="@dimen/_14sdp">

                <com.saikou.teraplay.custom.CustomTextInputLayout
                    android:id="@+id/urlInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_video_url"
                    app:endIconMode="clear_text"

                    app:endIconTint="?attr/colorOnSurfaceVariant">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/urlInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_medium"
                        android:imeOptions="actionSearch"
                        android:inputType="textUri"
                        android:textColor="@color/button_text"
                        android:textColorHint="?attr/colorOnSurfaceVariant" />
                </com.saikou.teraplay.custom.CustomTextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/trySearchButton"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_bold"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/search"
                    app:icon="@drawable/ic_search"
                    app:iconGravity="textStart"
                    app:iconSize="@dimen/_21sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/previewContainer"
                    layout="@layout/preview_container"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/dataProgress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/copyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/paste_from_clipboard"

        app:elevation="@dimen/_1sdp"
        app:layout_anchorGravity="bottom"
        app:srcCompat="@drawable/content_paste_24"
        app:tint="@color/on_primary" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>